--- a/Curriculum.html
+++ b/Curriculum.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum</title>
+    <title>Currículum Vitae</title>
 </head>
 <body>
-    
+    <center>
+        <h1>Curriculum</h1>
+    </center>
+    <hr>
+
+    <h2>Información Personal</h2>
+    <p><strong>Nombre completo:</strong> ____________________________</p>
+    <p><strong>Fecha de nacimiento:</strong> ____________________________</p>
+    <p><strong>Dirección:</strong> ____________________________</p>
+    <p><strong>Teléfono:</strong> ____________________________</p>
+    <p><strong>Email:</strong> ____________________________</p>
+
+    <h2>Perfil Profesional</h2>
+    <p>___________________________________________________________</p>
+    <p>___________________________________________________________</p>
+
+    <h2>Educación</h2>
+    <ul>
+        <li><strong>Título académico:</strong> ____________________________</li>
+        <li><strong>Institución educativa:</strong> ____________________________</li>
+        <li><strong>Año de graduación:</strong> ____________________________</li>
+    </ul>
+
+    <h2>Experiencia Laboral</h2>
+    <ul>
+        <li>
+            <strong>Puesto:</strong> ____________________________<br>
+            <strong>Empresa:</strong> ____________________________<br>
+            <strong>Duración:</strong> ____________________________<br>
+            <strong>Responsabilidades:</strong>
+            <ul>
+                <li>_________________________________________________</li>
+                <li>_________________________________________________</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Puesto:</strong> ____________________________<br>
+            <strong>Empresa:</strong> ____________________________<br>
+            <strong>Duración:</strong> ____________________________<br>
+            <strong>Responsabilidades:</strong>
+            <ul>
+                <li>_________________________________________________</li>
+                <li>_________________________________________________</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>Habilidades</h2>
+    <ul>
+        <li>____________________________</li>
+        <li>____________________________</li>
+        <li>____________________________</li>
+    </ul>
+
+    <h2>Idiomas</h2>
+    <ul>
+        <li><strong>Idioma:</strong> ____________________________ - <strong>Nivel:</strong> ____________________________</li>
+        <li><strong>Idioma:</strong> ____________________________ - <strong>Nivel:</strong> ____________________________</li>
+    </ul>
+
+    <h2>Referencias</h2>
+    <ul>
+        <li>
+            <strong>Nombre:</strong> ____________________________<br>
+            <strong>Relación:</strong> ____________________________<br>
+            <strong>Teléfono:</strong> ____________________________<br>
+            <strong>Email:</strong> ____________________________
+        </li>
+        <li>
+            <strong>Nombre:</strong> ____________________________<br>
+            <strong>Relación:</strong> ____________________________<br>
+            <strong>Teléfono:</strong> ____________________________<br>
+            <strong>Email:</strong> ____________________________
+        </li>
+    </ul>
+    <hr>
 </body>
 </html>
