--- a/Curriculum.html
+++ b/Curriculum.html
@@ -3,84 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículum Vitae</title>
+    <title>Currículum</title>
 </head>
 <body>
-    <center>
-        <h1>Curriculum</h1>
-    </center>
-    <hr>
+    <div style="margin: 0 auto; max-width: 800px;">
+        <center>
+            <h1>Currículum</h1>
+            <img src="Images/Yo.webp" alt="Foto de perfil" style="width: 150px; height: 150px; border-radius: 50%; margin: 20px 0;">
+        </center>
+        <hr>
 
-    <h2>Información Personal</h2>
-    <p><strong>Nombre completo:</strong> ____________________________</p>
-    <p><strong>Fecha de nacimiento:</strong> ____________________________</p>
-    <p><strong>Dirección:</strong> ____________________________</p>
-    <p><strong>Teléfono:</strong> ____________________________</p>
-    <p><strong>Email:</strong> ____________________________</p>
+        <h2>Información Personal</h2>
+        <p><strong>Nombre completo:</strong> Angel Martinez Benjamin</p>
+        <p><strong>Fecha de nacimiento:</strong> 23 de junio del 2003</p>
+        <p><strong>Dirección:</strong> Ejido la Lima Cd Valles. S.L.P</p>
+        <p><strong>Teléfono:</strong> 4811063680</p>
+        <p><strong>Email:</strong> 21690636@tecvalles.mx</p>
 
-    <h2>Perfil Profesional</h2>
-    <p>___________________________________________________________</p>
-    <p>___________________________________________________________</p>
+        <h2>Perfil Profesional</h2>
+        <p>Ingeniero en Sistemas con más de 3 años de experiencia en el desarrollo de software, administración de redes y gestión de bases de datos. Poseo sólidos conocimientos en lenguajes de programación como JavaScript, Python y SQL, y en el manejo de plataformas de la nube como AWS. Mi enfoque se centra en el desarrollo de soluciones innovadoras y escalables para mejorar los procesos tecnológicos de las empresas. Tengo habilidades en la gestión de proyectos ágiles y una fuerte capacidad de adaptación a nuevas tecnologías y retos. Me apasiona optimizar sistemas y mejorar la seguridad informática.</p>
 
-    <h2>Educación</h2>
-    <ul>
-        <li><strong>Título académico:</strong> ____________________________</li>
-        <li><strong>Institución educativa:</strong> ____________________________</li>
-        <li><strong>Año de graduación:</strong> ____________________________</li>
-    </ul>
+        <h2>Educación</h2>
+        <ul>
+            <li><strong>Título académico:</strong> Ingenieria en sistemas computacionales</li>
+            <li><strong>Institución educativa:</strong> Instituto Tecnologico de Cd Valles </li>
+            <li><strong>Año de graduación:</strong> 2026</li>
+        </ul>
 
-    <h2>Experiencia Laboral</h2>
-    <ul>
-        <li>
-            <strong>Puesto:</strong> ____________________________<br>
-            <strong>Empresa:</strong> ____________________________<br>
-            <strong>Duración:</strong> ____________________________<br>
-            <strong>Responsabilidades:</strong>
-            <ul>
-                <li>_________________________________________________</li>
-                <li>_________________________________________________</li>
-            </ul>
-        </li>
-        <li>
-            <strong>Puesto:</strong> ____________________________<br>
-            <strong>Empresa:</strong> ____________________________<br>
-            <strong>Duración:</strong> ____________________________<br>
-            <strong>Responsabilidades:</strong>
-            <ul>
-                <li>_________________________________________________</li>
-                <li>_________________________________________________</li>
-            </ul>
-        </li>
-    </ul>
+        <h2>Experiencia Laboral</h2>
+        <ul>
+            <li>
+                <strong>Puesto:</strong> Desarrollador de software<br>
+                <strong>Empresa:</strong> SoftTech Solutions<br>
+                <strong>Duración:</strong> enero 2022 - Diciembre 2023<br>
+                <strong>Responsabilidades:</strong>
+                <ul>
+                    <li>Desarrollo y mantenimiento de aplicaciones web y móviles utilizando tecnologías como JavaScript, Node.js, y React para mejorar la eficiencia de los procesos internos de la empresa.</li>
+                    <li>Colaboración con el equipo de diseño y análisis de sistemas para crear soluciones personalizadas que respondieran a las necesidades de los clientes, integrando bases de datos MySQL y MongoDB.</li>
+                </ul>
+                <br>
+            </li>
+            <li>
+                <strong>Puesto:</strong> Administrador de Redes<br>
+                <strong>Empresa:</strong> Tecnologías Avanzadas S.A. de C.V.<br>
+                <strong>Duración:</strong> Mayo 2021 – Octubre 2022<br>
+                <strong>Responsabilidades:</strong>
+                <ul>
+                    <li>Diseño, implementación y gestión de redes internas de la empresa, garantizando una infraestructura estable y segura utilizando dispositivos de Cisco y Juniper.</li>
+                    <li>Administración de servidores y servicios en la nube, realizando despliegues en AWS y configurando redes privadas virtuales (VPN) para asegurar la conectividad remota de los empleados.</li>
+                </ul>
+            </li>
+        </ul>
 
-    <h2>Habilidades</h2>
-    <ul>
-        <li>____________________________</li>
-        <li>____________________________</li>
-        <li>____________________________</li>
-    </ul>
+        <h2>Habilidades Tecnicas</h2>
+        <ul>
+            <li>Desarrollo web y mobile: Java, Python, C++, JavaScript, PHP, SQL, Ruby. </li>
+            <li>Desarrollo de software: Uso de metodologias agiles (SCRUM, Kamban) Control de versiones (Git, Github) </li>
+            <li>Ciberseguridad: Pruebas de penetracion, criptografia, protocolos de seguridad, herramientas de analisis vulnerables</li>
+        </ul>
 
-    <h2>Idiomas</h2>
-    <ul>
-        <li><strong>Idioma:</strong> ____________________________ - <strong>Nivel:</strong> ____________________________</li>
-        <li><strong>Idioma:</strong> ____________________________ - <strong>Nivel:</strong> ____________________________</li>
-    </ul>
+        <h2>Idiomas</h2>
+        <ul>
+            <li><strong>Idioma:</strong> Ingles - <strong>Nivel:</strong> B2</li>
+            <li><strong>Idioma:</strong> Aleman - <strong>Nivel:</strong> C1</li>
+        </ul>
 
-    <h2>Referencias</h2>
-    <ul>
-        <li>
-            <strong>Nombre:</strong> ____________________________<br>
-            <strong>Relación:</strong> ____________________________<br>
-            <strong>Teléfono:</strong> ____________________________<br>
-            <strong>Email:</strong> ____________________________
-        </li>
-        <li>
-            <strong>Nombre:</strong> ____________________________<br>
-            <strong>Relación:</strong> ____________________________<br>
-            <strong>Teléfono:</strong> ____________________________<br>
-            <strong>Email:</strong> ____________________________
-        </li>
-    </ul>
-    <hr>
+        <h2>Referencias</h2>
+        <ul>
+            <li>
+                <strong>Nombre:</strong> Jaime Jesus Delgado Meraz<br>
+                <strong>Relación:</strong> Casado<br>
+                <strong>Teléfono:</strong> 481-000-00-00<br>
+                <strong>Email:</strong> delgadomeraz@tecvalles.mx
+            </li>
+            <li>
+                <strong>Nombre:</strong> Victoria Rubi Martinez Mendez<br>
+                <strong>Relación:</strong> Casada<br>
+                <strong>Teléfono:</strong> 481-000-00-00<br>
+                <strong>Email:</strong> Victoria66@gmail.com
+            </li>
+        </ul>
+
+        <hr>
+        <h2>Tu Música Favorita</h2>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3620P9KJS2PDebJ9ABFitc?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
 </body>
 </html>
