--- a/Curriculum.html
+++ b/Curriculum.html
@@ -6,6 +6,15 @@
     <title>Currículum</title>
 </head>
 <body>
+    <thead>
+        <tr>
+            <center>
+                <th style="text-align: center; width: 100%;">
+                    <a href="/ghostam0.github.io/PW/Inicio.html" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                </th>
+            </center>
+        </tr>
+    </thead>
     <div style="margin: 0 auto; max-width: 800px;">
         <center>
             <h1>Currículum</h1>
@@ -76,11 +85,12 @@
                 <strong>Teléfono:</strong> 481-000-00-00<br>
                 <strong>Email:</strong> delgadomeraz@tecvalles.mx
             </li>
+            <br>
             <li>
                 <strong>Nombre:</strong> Victoria Rubi Martinez Mendez<br>
                 <strong>Relación:</strong> Casada<br>
                 <strong>Teléfono:</strong> 481-000-00-00<br>
-                <strong>Email:</strong> Victoria66@gmail.com
+                <strong>Email:</strong> victoria66@gmail.com
             </li>
         </ul>
 
