--- a/Horario.html
+++ b/Horario.html
@@ -6,6 +6,87 @@
     <title>Horario</title>
 </head>
 <body>
+    <thead>
+        <tr>
+            <center>
+                <th style="text-align: center; width: 100%;">
+                    <a href="/ghostam0.github.io/PW/Inicio.html" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                </th>
+            </center>
+        </tr>
+    </thead>
+    <br>        
+    <table style="background-color: aqua;" border="1" cellpadding="10" cellspacing="0" align="center" width="90%">
     
+        <thead>
+           <tr>
+              <th>Horario</th>
+              <th>Lunes</th>
+              <th>Martes</th>
+              <th>Miércoles</th>
+              <th>Jueves</th>
+              <th>Viernes</th>
+           </tr>
+        </thead>
+        <tbody>
+           <tr>
+              <td>7am - 8am</td>
+              <td rowspan="2">Fundamentos de ingeniería de software</td>
+              <td rowspan="2">Fundamentos de ingeniería de software</td>
+              <td rowspan="2"></td>
+              <td rowspan="2"></td>
+              <td></td>
+           </tr>
+           <tr>
+              <td>8am - 9am</td>
+              <td>Lenguajes y autómatas</td>
+           </tr>
+           <tr>
+              <td>9am - 10am</td>
+              <td rowspan="2">Lenguajes y autómatas</td>
+              <td rowspan="2">Fundamentos de telecomunicaciones</td>
+              <td rowspan="2">Lenguajes y autómatas</td>
+              <td rowspan="2">Fundamentos de telecomunicaciones</td>
+              <td>Programación web</td>
+           </tr>
+           <tr>
+              <td>10am - 11am</td>
+              <td rowspan="2">Sistemas operativos</td>
+           </tr>
+           <tr>
+              <td>11am - 12pm</td>
+              <td rowspan="2">Sistemas operativos</td>
+              <td rowspan="2">Arquitectura de computadoras</td>
+              <td rowspan="2">Programación web</td>
+              <td rowspan="2">Arquitectura de computadoras</td>
+           </tr>
+           <tr>
+              <td>12pm - 1pm</td>
+              <td>Arquitectura de computadoras</td>
+           </tr>
+           <tr>
+              <td>1pm - 2pm</td>
+              <td rowspan="2">Programación web</td>
+              <td rowspan="2">Sistmas programables</td>
+              <td></td>
+              <td></td>
+              <td rowspan="2">Programación logica y funcional</td>
+           </tr>
+           <tr>
+              <td>2pm - 3pm</td>
+              <td></td>
+              <td></td>
+           </tr>
+            <tr>
+                <td>3pm - 5pm</td>
+                <td rowspan="2">Programación web</td>
+                <td></td>
+                <td></td>
+                <td>Sistemas programables</td>
+                <td></td>
+            </tr>
+        </tbody>
+     </table>
+     
 </body>
 </html>
