--- a/TechnicalText.html
+++ b/TechnicalText.html
@@ -6,6 +6,16 @@
     <title>Texto Tecnico</title>
 </head>
 <body>
+    <thead>
+        <tr>
+            <center>
+                <th style="text-align: center; width: 100%;">
+                    <a href="/ghostam0.github.io/PW/Inicio.html" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                </th>
+            </center>
+        </tr>
+    </thead>
+
     <center><h1>Texto Tecnico</h1></center>
     <hr>
     <p>
