--- a/RestfulC.html
+++ b/RestfulC.html
@@ -6,6 +6,14 @@
     <title>Restful Countries</title>
 </head>
 <body>
-    
+    <thead>
+        <tr>
+            <center>
+                <th style="text-align: center; width: 100%;">
+                    <a href="/ghostam0.github.io/PW/Inicio.html" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                </th>
+            </center>
+        </tr>
+    </thead>
 </body>
 </html>
