--- a/KitchenSnk.html
+++ b/KitchenSnk.html
@@ -11,7 +11,7 @@
         <tr>
             <center>
                 <th style="text-align: center; width: 100%;">
-                    <a href="/ghostam0.github.io/PW/Inicio.html" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                    <a href="https://ghostam0.github.io/PW/Inicio" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
                 </th>
             </center>
         </tr>
@@ -84,7 +84,7 @@
     </main>
 
     <footer>
-        <p>Hecho por <span class="author">[Tu nombre]</span> con amor ❤️</p>
+        <p>Hecho por <span class="author">ghostam0</span></p>
     </footer>
 </body>
 </html>
