--- a/RestfulC.html
+++ b/RestfulC.html
@@ -10,7 +10,7 @@
         <tr>
             <center>
                 <th style="text-align: center; width: 100%;">
-                    <a href="/ghostam0.github.io/PW/Inicio.html" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                    <a href="https://ghostam0.github.io/PW/Inicio" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
                 </th>
             </center>
         </tr>
