--- a/Clases/Jav/PokeApi.html
+++ b/Clases/Jav/PokeApi.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokeAPI</title>
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.red.min.css"
-    >
-    <script src="PokeApi.js"></script>
-</head>
-<body>
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <style>
+      dt {
+        font-weight: bolder;
+      }
+    </style>
+  </head>
+  <body>
     <thead>
         <tr>
             <center>
@@ -19,23 +23,22 @@
                 </th>
             </center>
         </tr>
-    </thead>
+      </thead>
     <main class="container">
-        <h1>PokeAPI</h1>
-        <article>
-            <dl>
-                <dd>
-                <dt>Nombre</dt>
-                <dd id="pokemon-name"></dd>
-                <dt>Tipos</dt>
-                <dd id="pokemon-type"></dd>
-                <dt>Imagen</dt>
-                <dd id="pokemon-Image"></dd>
-                <img id="pokemon-Image" alt="">
-                </dd>
-            </dl>
-        </article>
-
+      <h1>PokeAPI</h1>
+      <article>
+        <dl>
+          <dt>Nombre</dt>
+          <dd id="pokemon-name"></dd>
+          <dt>Tipos</dt>
+          <dd id="pokemon-types"></dd>
+          <dt>Imagen</dt>
+          <dd>
+            <img id="pokemon-image" src="" alt="N/A" />
+          </dd>
+        </dl>
+      </article>
     </main>
-</body>
+    <script src="PokeApi.js"></script>
+  </body>
 </html>
