--- a/Clases/Jav/jsdemo.html
+++ b/Clases/Jav/jsdemo.html
@@ -6,6 +6,15 @@
     <title>Dentro de javascript</title>
 </head>
 <body>
+    <thead>
+        <tr>
+            <center>
+                <th style="text-align: center; width: 100%;">
+                    <a href="https://ghostam0.github.io/PW/Inicio" style="font-size: 32px; text-decoration: none; display: inline-block;">Ir a Inicio</a>
+                </th>
+            </center>
+        </tr>
+      </thead>
     <h1 onmouseenter="style.color = 'red' " onmouseleave="style.color = 'blue'">Titulo Cualquiera</h1>
     <p>Parrafo dentro del demo javascript</p>
 
