--- a/Clases/Jav/Eventos.html
+++ b/Clases/Jav/Eventos.html
@@ -1,59 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Manejo de eventos en JavaScript</title>
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.jade.min.css">
-   <link rel="stylesheet" type="text/css" href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/regular/style.css"/>
-   <link rel="stylesheet" href="eventos.js">
-</head>
-<body>
-   <main class="container">
-      <h1>Manejo de eventos en JavaScript</h1>
-      
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Manejo de Eventos en JS</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+  </head>
+  <body>
+    <main class="container">
+      <h1>Manejo de eventos</h1>
       <article>
-         <h2>Propiedad <code>on</code></h2>
-         <p>Aquí se puede ver un ejemplo de cómo se manejan eventos en JavaScript</p>
-         <p>Este es un párrafo de ejemplo para la clase del profe Jaime y quiero extender el texto lo más largo posible para que se vea bien en la pantalla.</p>
-         <button onclick="saludar()">Saludar</button>
-         <output id="salida_boton">Nada aún</output>
+        <h2>Propiedad <code>on</code></h2>
+        <button onclick="saludar()">Saludar</button>
+        <output id="salida_boton">Nada por ahora</output>
       </article>
       <article>
-         <h2>Propiedad <code>addEventListener</code></h2>
-         <p>Aquí se puede ver un ejemplo de cómo se manejan eventos en JavaScript</p>
-         <p>Este es un párrafo de ejemplo para la clase del profe Jaime y quiero extender el texto lo más largo posible para que se vea bien en la pantalla.</p>
-         <button id="otro_boton">Otro botón</button>
-         <output id="salida_otro">Nada aún</output>
+        <h2>Event Listener</h2>
+        <button id="otro_boton">Otro botón</button>
+        <output id="salida_otro">Nada por ahora</output>
       </article>
       <article>
-         <h2>Eventos de input</h2>
-         <form action="#">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" autocomplete="off">
-         </form>
-         <output id="salida_teclado">Nada todavía</output>
+        <h2>Eventos de Input</h2>
+        <form action="#">
+          <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" autocomplete="off" />
+        </form>
+        <output id="salida_teclado">Nada por aquí</output>
       </article>
       <article>
-         <form id="miForm">
-            <fieldset>
-               <label for="a">Valor <code>A</code></label>
-               <input type="number" id="a" name="a">
-            </fieldset>
-            <fieldset>
-               <label for="b">Valor <code>B</code></label>
-               <input type="number" id="b" name="b">
-            </fieldset>
-            <fieldset>
-               <button type="submit" id="sumarBtn">Sumar</button>
-            </fieldset>
-         </form>
-         <code id="salida_suma">0</code>
+        <h2>Eventos de tipo <code>submit</code></h2>
+        <form id="miForm">
+          <fieldset>
+            <label for="a">Valor <code>A</code></label>
+            <input type="number" id="a" name="a" />
+          </fieldset>
+          <fieldset>
+            <label for="b">Valor <code>B</code></label>
+            <input type="number" id="b" name="b" />
+          </fieldset>
+          <fieldset>
+            <button type="submit" id="sumarBtn">Sumar</button>
+          </fieldset>
+        </form>
+        <code id="salida_suma">0</code>
       </article>
-   </main>
-   <button class="boton-inicio outline secondary">
-      <a href="index.html"><i class="ph ph-house"></i></a>
-   </button>
-   <script src="js/eventos.js"></script>
-</body>
+    </main>
+    <script src="eventos.js"></script>
+  </body>
 </html>
