--- a/FakerApi.html
+++ b/FakerApi.html
@@ -7,11 +7,18 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
-      href="css/stylePA.css"
+      href="css/FakerApi.css"
     />
-    <link rel="stylesheet" href="css/FakerApi.css" />
   </head>
   <body>
+    <thead>
+        <tr>
+            <th colspan="3" style="text-align: center;">
+                <a href="https://ghostam0.github.io/PW/Inicio" style="font-size: 32px; text-decoration: none;">Ir a Inicio</a>
+            </th>
+        </tr>
+    </thead>
+    
     <main class="container">
       <h1 class="center">FakerAPI Viewer</h1>
 
@@ -53,3 +60,4 @@
     <script src="css/FakerApi.js"></script>
   </body>
 </html>
+
